--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=busd_dev0
 quarkus.datasource.password=busd_p
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/busd
+quarkus.datasource.reactive.url=postgresql://localhost:5432/busd
 
 # Flyway minimal config properties
 quarkus.flyway.migrate-at-start=true
