--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 # configure your datasource
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=busd_dev0
-quarkus.datasource.password=busd_p
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/busd
-quarkus.datasource.reactive.url=postgresql://localhost:5432/busd
+quarkus.datasource."mig".db-kind=postgresql
+quarkus.datasource."mig".username=busd_dev0_mig
+quarkus.datasource."mig".password=busd_p
+quarkus.datasource."mig".jdbc.url=jdbc:postgresql://localhost:5432/busd
 
 # Flyway minimal config properties
-quarkus.flyway.migrate-at-start=true
-quarkus.flyway.baseline-on-migrate=true
-quarkus.flyway.validate-on-migrate=true
-quarkus.flyway.create-schemas=false
+quarkus.flyway."mig".migrate-at-start=false
+quarkus.flyway."mig".baseline-on-migrate=true
+quarkus.flyway."mig".validate-on-migrate=true
+quarkus.flyway."mig".create-schemas=false
+
+quarkus.datasource."app".db-kind=postgresql
+quarkus.datasource."app".username=busd_dev0_app
+quarkus.datasource."app".password=busd_p
+quarkus.datasource."app".reactive.url=postgresql://localhost:5432/busd
+quarkus.datasource."app".jdbc.url=postgresql://localhost:5432/busd
