--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr4-runtime</artifactId>
+                <version>4.7.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
